Changes of changes

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <dd>Donwloading contents of the remote repository to your local machine for the first time.</dd>
 
       <dt>staging</dt>
-      <dd>Preparing the changes for commiting.</dd>
+      <dd>Preparing the changes changes for commiting.</dd>
 
       <dt>comitting</dt>
       <dd>Permanently saving the changes you have made</dd>
 
       <dt>pushing</dt>
-      <dd>Uploading your commits to the remote repository</dd>
+      <dd>Uploading your commits to the remote repository </dd>
     </dl>
   </article>
 </body>
